--- a/movieinfoplus/maincollection.resx
+++ b/movieinfoplus/maincollection.resx
@@ -1226,91 +1226,91 @@
   <data name="tsbShowsOpenTVDBPage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADEAAAAZCAYAAACYY8ZHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAACcJJREFUWEfNWHlQ
-        lOcZ/wjtZKZJp9No20xtJ8YjGY2AJorVRGOsAp4RI7GE2BEQNSCnKAKigkiNIWJqUI5FUBQ5XO778EDF
-        C2TZg2UB2eVabgFRUBR+fd5vRfcjwtS/2p35ze95n+t9nu89PvgMuOe/4eFHkwwMhjYNDz+byHGGv+E4
-        vEUmEIY4bniYREOS39C5Gz4bidNjA/IZ5DiDXmLy535H/ITGA8/jmI7lY3nG+YHyGLDYfmKK51heAmPu
-        10RvAL+qMTQ0EBsYvN0qSDQ01Bf47IkcTx8VYvBRNp70ZeDxgwwM9DJOw+PeFEIqLw8QD/Smob+HZALj
-        /p50nh91E3fTuDuVxgxMn0p6nY3h4X1CVzr6iHkwuStDp+tkSCUkE1J0cgdxB3FXFh5056P/kQRDQ70n
-        Ab453Q8YmPL0ab3y8YMUDNw/gS5tANo1/ujQHCKQrD6ADvU+dNYFoqOOdOr9aK89gLZaf7Tf8ydm8gG0
-        0Fhb7Y+WGgJjVSBaVUHEBwkjugBoqw5BWxmExspANFYFokl5EM2V/miqPIgmBYHJyn1k9+fRoCCWB6BZ
-        dRhdzSfR3RaP/n61dHi4/z2+gWfPevY8HWy429eXS0/lOLqaAqFV+aC3KQAPGn3R2+CNnvrdhD14UO9D
-        7I37JN/XEGuI1cTUYMc9X4IXNbmL2BudtX4EH4IXOu/5UNPeaKvxRjuhrdqXCvKlhklWMuyhZndDq/RC
-        i3IvNexHPj68fxv5tJBvk9IP1Xd2oZEa6lT/hO6WLAw+aVBT/du4J48VeNiTjJ72EHrqvqivcEZHtQcV
-        74nuBg90aTyoKFd01LpQITuoSBeCG+mIScfrq53J5oKuOg8qmGxMV0O6aqfn2EHMoPNrr3VFa607Wmnc
-        VrUNrVWOvK691o18XNCmciKQrvol2lTOqJe4ovKaI+qle9FacxSd2kQ87JOD6394hfZbKG0LPzRK3aCV
-        u6CTglmiRsVWNCu2/N+gUe6A6lJHyK85oU5Cq685jt6uInB9vUXobjpGe9KHlnQXPcFdtIS7MH3qH/Hm
-        m2+OiZCgFQKbu+NCPvartR8J9Kd+XjdmDuYrPrOR4jx5Hms+lrumjK34LqglW1B12xmVN33QXHWEzkc2
-        uJ77udTREWiknqiXOdLBcqMn74ZpU/4wbhN5F74V2C1Xz6QD6Yali6cK9Dfy7cbNwwpnPgnRG8b1Y3mb
-        Fe6ou7sJyptbUXGd6pXTRdOcDq67I4v25yHcK3dH7d0tUJfvQF05Wy4dL/lsiiA5byNIircI9B+bTOL1
-        06ZM/IW//hPetNEE5yIsBT4+HotIJ1yxw/uXwcfjM4GfpNgBNbetIbtmi7JiV9RKDqC1QQyuszWdrjl/
-        qEpdaZls+S6rCCO8eOFkQaIRm/KmA+YY//mFber7E/kY/YKZfbTOxsoIBcnWAr/dLgsRE7pGoAv0XQIG
-        /XyFFKcssUL5xU24c9EJVWX7oNUkgmvXpkKj2I/KW46QXv8nKoo3E2whuUJ8xRaLFrwnfBqkYzYJ+a1c
-        Pl1gu5b1jWDM7MxPv5B/WH6E7AQrgW6nkykiQ4Rn7IDXIux0NH3hN2XyBMplC2mxJW7mWKOkYDsUt+nq
-        rYsD19okRi1dWbKS71B66RvcyrfBbYYCHX86/6+CCXk72Ri7bpsrsIUeWS4Yu5Cd5dBvwurLGUiNFW4d
-        l61zMTpWP2bihN+iKMUKt2jessI1uJK2HldzHSAt8UZDzTlw2oZEVJd7ofyqAx2wDbia+bUAC+b9RVDE
-        1YyX9kAf4Z51sp8j8N3jasrn0i9o/eoPkRi1SqBjcT8FfTHuwTaa8SfKZYUb2RYoSFqHS5m2VLMnNNWx
-        4Bo1cVDccadV2IyrWV+iMNkShWJLFInXESwxf+6kUftSZ2cI/3GpwGZjNVMwZnbmp9/EupXTce6kuUC3
-        fbMxgv0XCXSeTp+A6fVjw4KX0iosQ875dShI/Ra3L7lAXXUW3D1VLO2t3biRZ4OLKSuRE78auYSc+DW8
-        bPrxy8PLEo7oR3jCO2+/mGi0b1KUOe+vX8ga86mIOb5MoHPYNAuH/RYKdO7b58B9+2yBbq+HKQoTP0da
-        zCrkJdug9LI7VNJT4FSK05Dd8MS1LGtaJjNknF2BjFgLpBOnx67AvDnvChIxHQPvQzzjg5dXqr78zu/f
-        epFHv4nVZu9DFCK8dexsZiLQe77wPDmYwIWgH8vGmWc/RWKEGTITvsbNIjfIyyLBVcmiaG+5oTjDGtlx
-        f0dKjJkAc2cLmxhtX7lMeAWPTMriRnz1C2H+4cGLBcXZWs9AgNc8gW6HvREY9GPZODncFOd//gIZcVYo
-        yXeBrDQcXKU0EmWXnXExdQOSYxa9dhOsgFf9uWC1dtqYTXg5Cy+AsZoYnZs1eu7oXJw5uhgpZ+iGynaC
-        9E4YOKU0gvaWM3+gEyMXvnYTo5/gSEOsgFetxKsaZk2NlUff/+yJpQgP/ASiwwsgjlmLK9nfoeL2CXDS
-        8uih0ituuJSxESmnl7x2EyzxWIX9N02MNDteE+x8sUZZvuN+JogOXkTvmvUoznVCaUnkENfUEPu4tMSL
-        mrBBVpzFL5oYfQb+1+OoI6aIpweXStvpcu5OsNuVa9XmpFdXRg4W53sgPc4SqafNII5aClGwCSKCZyEq
-        hDo/RggxQvSPxjgVbEQwRhRB9IMRj4jvGWYh4ogxwr5nmKXDYSOE/YuYhwlhNsKCiIOMEH7YGJE/sBw0
-        D8WcOGSE0ECGWTgRxOJ1saEBxvj3PmOE7P2Q5v0bYo9/Tu8ZC2Qm2aPs1jE0qdMa6f/rRMOOjqtrlIoY
-        RXGuM3KSNiJfvBGZcWt1Vym7as+aIS3WjLrXXa8MaWdo1U6b60DLnBy9nNgC4ugVuBBtwUN8iviUOc/i
-        Uyt4JEVaEMx0LLJAosicYIaECPPnMEN8+HKcD1uOhDCyha1AwkmKC6d5olchXrQa6QkOKC4KGmxpLgxt
-        a7v0LtfSUj6Z/a/d1nZ5fXl5yMCNy94opqurKHMr8tK2EOyRl/4S+ekOvC43lZBii7wUe+QT8lLs6AVE
-        MiHvgh3yCdkXNiOLkJ1MstgOWTxseeSQnJNENkIWQ8JmZCYy2ZZnhgzSZSTY0TvBnke22AEFmR64dT0Y
-        zU25iUApfcKhX3NzKX1jYl88YNDcmBOlVsc3qlRnW5SKiBaZNFItk0apFOWiWjmBjeVSUZ3ibvg9Bjlj
-        0jPIKkQquURUyfQVFWEaiSSynoHJDCN2iURUwyArFynlpaI6mYTmKAttrZBEamUUK7tDczA9yXfvhjeQ
-        b71UElnNYuTy003q2vjGBk1Ki1Z78auRrzX/ASuL6aUAUdELAAAAAElFTkSuQmCC
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAACcFJREFUWEfNWHlQ
+        lOcZ/4jtZKZJp9No20xtJ8YjGY2AJorVBGOscnhFjMQaYkdU1ICcigieKFJjiJgalGM5FEQOl/sGlcsL
+        QZY9WJZrl2u5BUTBC3593m9F9yPC1L/anfnN73mf632e7z0++Ay457/h4YeTDQyGNg0PP5vEcRN+w3F4
+        i0wgDHHc8DCJE0h+Q+c+4dlInB4bkM8TjjPoIyZ/7nfEj2k8+DyO6Vg+lmecHyiPAYsdIKZ4juUlMOZ+
+        TfQG8KuaCRMMxAYGb7cJEg0N9fs8eyzH04d5ePIwA4/7U/HofioG+xgn41FfIiGJlweJB/uSMdBLMoHx
+        QG8Kzw97iHto3JNEYwamTyK9zsbw4B6hOwX9xDyY3J2q03UxJBESCIk6uZO4k7g7Hfd7cjDwUIKhob5z
+        AN+c7gcMTn36tEH56H4iBu+dRbf2KDo03ujUHCeQrD6CTvUhdNX7oLOedOrD6Kg9gvZab3TUeRMz+Qha
+        aayt9kZrDYGxygdtKl/iY4QR3VFoq45DW+mLpkofNFX5oFl5DC2V3miuPIZmBYHJykNk9+bRqCCWH0WL
+        6gS6W86hpz0GAwNq6fDwwHt8A8+e9e57+qTxbn9/Fj2VM+hu9oFW5YW+5qO437QffY2e6G3YS9iH+w1e
+        xJ64R/I9DbGGWE1MDXbW7Sd4UJPuxJ7oqj1I8CJ4oKvOi5r2RHuNJzoI7dX7qaD91DDJSoZ91OxeaJUe
+        aFUeoIYPko8X799OPq3k26w8iOo77miihrrUP6GnNR1PHjeqqf4d3ONHCjzoTUBvhz899f1oqHBEZ7Ub
+        Fb8HPY1u6Na4UVHO6Kx1okJ2UZFOBBfSEZOO11c7ks0J3fVuVDDZmK6GdNUOz7GLmEHn11HrjLZaV7TR
+        uL1qB9qq7HldR60L+TihXeVAIF31S7SrHNEgcUZlsT0apAfQVnMKXdo4POiXgxt4UED7LYC2xUE0SV2g
+        lTuhi4JZoibFdrQotv3foEluh+pSe8iLHVAvodXXnEFf9xVw/X1X0NN8mvakFy2pOz1Bd1pCd8yY9ke8
+        +eabY8Lf11Jgc7VfxMd+teYjgT7s57Vj5mC+4gsbKG4Pz2PNx3LXlLEVd4dasg1VJY6ovOWFlqqTdD4y
+        wPXey6KOTkIj3YMGmT0dLBd68i6YPvUP4zaRfflbgd1q1Sw6kC5YuniaQH8zZ8u4eVjhzCc2fP24fixv
+        i8IV9Xc3QXlrOyquU71yumhaUsD1dKbT/jyOunJX1N7dBnX5LtSXs+XS8ZLPpgqS8zaCpHCbQP+x8WRe
+        P33qpF/46z/hTRuMcTHYSuDj5WZKOuGKnTi8DF5unwn8JIV2qCnZCFmxLcoKnVErOYK2RjG4rrYUuua8
+        oSp1pmWy5busIozw4kVTBIlGbMpbdphr9OcXtmnvT+Jj9Atm9tE6G2tD5CZsFPjtdVqEiIDVAp3P/iVg
+        0M+XR3HKG9Yov7oJd646oKrsELSaOHAd2iRoFIdRedse0uv/REXhZoItJAXEBbYwXfie8GmQjtkk5Ldi
+        +QyBrTj9G8GY2ZmffiH/sPoIGbHWAt1uBxOE+AvP2BEPU+y2N3nhN3XKRMplC2mhFW5lbsSN3J1QlNDV
+        Wx8Nrq1ZjFq6smQ3vkPptW9wO8cGJQy5Ov50wV8FE/J2sjF23jFPYAs4uVwwdiI7y6HfhPWXM5EUKdw6
+        TtvnYXSsfsykib/FlURr3KZ5y/JWoyB5HYqy7CC94YnGmovgtI1xqC73QHmRHR2w9ShK+1qAhfP/Iiii
+        KPWl3cdLuGcdts4V+O5zNuFz6Re0btWHiAtdKdCxuJ98vxj3YBvO/BPlssbNDAvkxq/FtTRbqnkPNNWR
+        4Jo00VDccaVV2Iyi9C+Rl2CFPLEVrojXEqywYN7kUftSZ2cI+nGpwGZjPUswZnbmp9/E2hUzcPGcuUC3
+        c7MR/LxNBbo9Dp+A6fVjA/2W0iosQ+altchN+hYl15ygrooCV6eKpL21FzezbXA1cQUyY1Yhi5AZs5qX
+        TT5+eXhZwhH9CE985+0XE432jQ815/31C1ltPg0RZ5YJdHabZuPEwUUCnevOuXDdOUegO+Bmgry4z5Ec
+        sRLZCTYozXeFShoGTqU4D9nNPShO30jLZIbUKEukRloghTgl0hLz574rSMR0DLwP8cwPXl6p+vI7v3/r
+        RR79JlaZvQ+Rv/DW2WIzCz6eC4Tnyc4YTgT9WDZOi/oUccFmSIv9GreuuEBeFgKuShZKe8sFhakbkRH9
+        dyRGmAkwb46widH2FcuEV/DIpCxuxFe/EOYf5LdYUJztxpk46jFfoNu11RAM+rFsnBBkgks/f4HUaGvc
+        yHGCrDQIXKU0BGX5jriatB4JEaav3QQr4FV/LlivmT5mEx6OwgtgrCZG52aNXjw1DxdOLUbiBbqhMhwg
+        vRMITikNpr3lyB/ouJBFr93E6Cc40hAr4FUr8aqGWVNj5dH3jzq7FEE+n0B0YiHEEWtQkPEdKkrOgpOU
+        hQ+VFrjgWuoGJJ5f8tpNsMRjFfbfNDHS7HhNsPPFGmX5zhw0RrifKb1r1qEwywElxSFDXHNj5KPSGx7U
+        hA3Soy1+0cToM/C/HoeeNEEMPbgk2k75WbvBbleuTZuZUl0Z8qQwxw0p0VZIOm8GcehSiPyMEew3G6H+
+        1Plpgr8hwn80QpifIcEIoQTRD4Y8gr9nmI3gk0YI/J5htg4nDBH4L2IexoQ5CPQl9jVE0AkjhPzActA8
+        FHP2uCECfBhm46wvi9fFBhw1wr8PGcH/wIc0798QeeZzes9YIC1+K8pun0azOrmJ/r+Om9DZWbRaqYhQ
+        FGY5IjN+A3LEG5AWvUZ3lbKrNsoMyZFm1L3uemVIvkCrdt5cB1rmhPDlxBYQh1vicrgFD3EYcZg5z+Iw
+        Sx7xIRYEMx2LLBAnMieYITbY/DnMEBO0HJcClyM2kGyBlog9R3FBNE/4SsSIViEl1g75uT5PWlvyAtrb
+        r73LtbaWT2H/a7e3568rL/cfvJnviUK6uq6kbUd28jbCVmSnvEROih2vy0oiJNoiO3ErcgjZiVvoBUQy
+        IfvyFuQQMi5vRjohI4Fk8Rak87DlkUlyZjzZCOkMsZuRFsdkW54ZUkmXGruF3glbeWSI7ZCb5obb1/3Q
+        0pwVB5TSJxz6tbSU0jcm9sUDBi1NmaFqdUyTShXVqlQEt8qkIWqZNFSlKBfVyglsLJeK6hV3g+oY5IxJ
+        zyCrEKnkElEl01dUBGokkpAGBiYzjNglElENg6xcpJSXiuplEpqjLKCtQhKilVGs7A7NwfQk370b1Ei+
+        DVJJSDWLkcvPN6trY5oaNYmtWu3Vr0a+1vwHACnplwrJ5isAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="tsbShowsOpenFolder.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAACDhJREFUWEfVl3lw
-        E+cZxtN22k77V1sy05m2+aeZzEBKB5I0KZNCjwTaNJAEkpAQmmDOGgwYHNqEIyTlLlAOB5dbNQZsDAJj
-        7Bifkk/ZsrEO67Csw7JsyYeuPbW67Ojpu07tCQECDGlnqplnvp39dvf5ve/3fu+uHnro/+EH4Gscx70R
-        DodfEARhYl9f33f+p9wsy35vaGiIEUURBMISiC4QCFyhcWcoFHqd5p+guR/+16Ao6oeD9ItGo4hEIpAk
-        aXSURXMyFAhCpEtMfr//BM3/5CuF4Xl+AkUakA3lLHxRYzDxeByDg4Nob2/3EuwjXxkE1cC3GIYZisVi
-        twUYA5IiEggUlZWV0Gq1TXTfdx8YIhllZgh9TaXhgDcWTyRH036nDEhRCVQbowCUBTidzvwHBhgOmfaJ
-        lkKE+52IEcDn13+sHuRzsuQaGctAjUqFqmoVzLqKMsZTlymyzt9JfYYf3zdQfLD1hGA6j6DPjmgsMV6E
-        Y6Zj6z8GQ/UCq9WK4uJiFBZeQuF5BbTl2fAa8hCynIqy7ipNLMb99J5BEj0qJW/MRdDbBek/AJ83vV1R
-        yhDyUvh8XlisNtxo1SA46EYkmoQYpEyyjmX3DBB3XFdx7ScQ6LXSA+Lj6y9vvztJhpLn5DEixeEw1UOd
-        +yfY6/eBNx8CZ9rZzw/qtlORfv2uIJIx38i15sDvMUOMxEYfLEd4byIAitpta0Ppx3OgL5wPrjkdfMsS
-        hBz5xnHzGGe8GmON5+NiT1ZS6J+R4n0T5Eki/AbfftrLag5gqNsIXojIDWe08XA8NSASz8vdUW5Gt4pl
-        eYJOwGVtwZUDL8KgXAiuZSVYzVKw3VfLxwGG+TL3iFiOpFCNBFeDmL86LIXraqRAW+VQ66HhoGo7PKYm
-        DPb7Mejz0eiDnxqOvM5B2vdMmAHD8AR3sxiGgyDGYTdrULBnJjqUCygDfwbTuBisp+af4wAjMc+aEbYI
-        I1wpPuVLMMLLxxeRDOUh2ncIvH0P/DYFvPYKuO1WeLpd6O12fCa3E16PG74+Dwao6IZGwYIIjUJxlLUY
-        bMZG5G77LcyX3wTftBzh+nfA9rdsGwcAhIcTbMlAkr2MYY7EXCRdQDKgQLx3D2J9OxD1bqdxE7zWXHRZ
-        zOi2O0g2dHd1EpQs62ejw4Yelx19vT0IBsOjAFZ9I05unQ5b0QLwjUsIYDFC/dqbd8KwZN49zOSRcQFF
-        fo50Bsmho4j3bEOsewsizkxE3Bsg9e5CrzkXnboKWHVN6NTr0GkyjULZrWY4rCbYLUY4LB2j21AGMLXX
-        4/imaXBdowzUv41g/XJIbM/cm3ZAKhV9JMKcEZOhXAwHFUgGTyPRfxgx10eQbKsg2FdD8uwi7SHtBO/a
-        hqD1Q/gMe+BsOwaL9iL0zdeh1zZS99NR1DoCMcHn9aGlrhQ5WZPgujQL4fI/wK9ejKQUfPqWLZjkGy8k
-        /Ucp9SeR9B9H3LsPMcdfIZoXQXBuJOO9EN07wDs/AN/1LnjbOojWtaRM2t8bENBvhEe7G67Wk+hovgqD
-        thmdBj0qr/wLB1c9ig7Fr+AqeBbOwgVCqM9+a1tOJPxThf7sZGLwCGTF5Ig70yFalhLAVghkLji3gLOR
-        eWcWma6npkIykHRrwN1YDeFGBsTWlWB0m6FvugZDmxalF47hYPqjuHH8WXScegpthUv8XG/v92/bhJJM
-        uTI+sJ8APka0eytEUxqJmkfXZogEIZsLnQRgyQJnXEfG68C2Z4K9sQasdg0YzWqw9SvBN6yAS3MY2vo6
-        XM37GNmUgfaj09CeMwXGkg1O6jHfvC3AcMw3M+77O+K+vZC61kM0poE3rgTX+R4Ex/vgre+CI3O2g4z1
-        a8GROde2FmwzGTdmgG3IAFObDk61DKHGDdCqi6BUHEROxmNoy/kltIcmw3L9I5Pc5G4LIE/E/WebYz3v
-        I2JaAtHwNgQj7V3dMoQN6WRMhnLajZQBPY1kzrWQeRN1uPpVYNXpYFQrwFYth0AQ1tps5B/bi+NrH4Mm
-        +xnU758Mq+pwyZe+AxIR9yLGnIWoIY20FKJ+EfjW+RTlqxTVqwg0LECgMQ1haiqMhkxlUeRcLa19DZlX
-        LgNbsQx8eRoCde+hIOcDnF43EQ0HnkbN7sfhaDqX96UA8Xhqkkadj4bChfCq59PL4w1I7e8g0kbZaFlI
-        kc4FWzMH4YrZCFx/CUNl80gLEKqkFkuRsxWkMur3pYsRqUnHJ8dXQJE5EbX7nkT5jsfR1VrsGUmlVqRS
-        qW/fESTMR2abTHZlnbrEVV20H43KDJiL34Kv+nVw9fMhNFBTUdNxxSvgSv6IcNEsBJWz4L/0AvzKlxG8
-        Mp/OvQWxZBE6lcuRv2kqqnZNQdn2n8PQVIxgmJO/otbf9XUsV6sgJKf3ev0bdTpjpbrqbLhauR3NhUup
-        tb6GgbJXwFTMA1c2F1zRbHAXZ4LN/w3CZ6cjeObXCOQ9h4ByHlSHn0fJ1p+h9G9PoLq0ADa7E/QV/eJd
-        Ab54AaVtQoiLzXS5+/+h1TRqVSWnPlXnb0DruTep09GSFM9GqOglMHTMnHsOXO4MRHKnwX52DpSbJ+PS
-        lidxTnEUXd1uyz19kNyNUEomnxoY4j5s03WoPynNFVUFm6A5sxDW8y/DUzALAVqS8PnnEbw0B9e2/QKK
-        rClQnDwmv7r/crdn3/e8lEr9KMRK81xu75FWTZ1WfS17pPbsOrQpXkN3/u/RcuQZHFoxCRUVFUHK5A/u
-        2+B+b5B3kz8USbPaHAXNtaW9VYW7cFmxk74XQpn3+6wHul4u5EgkMdU3wGQEQkwmRT/+7/rf6GJoEGMZ
-        QH0AAAAASUVORK5CYII=
+        YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAACDlJREFUWEfVl3lw
+        E+cZxtN22k77V1sy05m2+aeZzEBKB5I0KZNCjwTaNJAEkpAQmmDOGgwYHNqEIyTlLlAwBJdbNQZsDAJj
+        7BjLh+RTtmyswzos67AsW/Kha0+tLjt++q5Te0KAAEPamWrmmW9nv919fu/7vd+7q4ce+n/4Afgax3Fv
+        RCKRFwRBmNjb2/ud/yk3y7LfGxwcZERRBIGwBKIPBoNXaNwZDodfp/knaO6H/zUoivrhEP1isRii0Sgk
+        SRodZdGcDAWCEOkScyAQOEHzP/lKYXien0CRBmVDOQtf1BhMIpHAwMAA2trafAT7yFcGQTXwLYZhBuPx
+        +G0BxoCkqAQCRUVFBXQ6XSPd990HhkjFmBlCb2NpJOiLJ5Kp0bTfKQNSTALVxigAZQEulyv/gQGGwuZ9
+        orUQkT4X4gTw+fUfqwf5nCy5RsYyUK1Wo7JKDYteVcZ4azNF1vU7qdf44/sGSgy0nBDM5xHyOxCLJ8eL
+        cMx0bP3HYKheYLPZUFxcjMLCSyg8r4Cu/DB8xjyEradirKdSG49zP71nkGS3WsmbchHydUL6D8DnTW9X
+        lDKEvBR+vw9Wmx03WrQIDXgQjaUghiiTrHPZPQMknNfVXNsJBHts9IDE+PrL2+9OkqHkOXmMSgk4zXXQ
+        5P4Jjrp94C3Z4Mw7+/gB/XYq0q/fFUQy5Zu4lhwEvBaI0fjog+UI700EQFF77K0o/XgODIXzwTWlg29e
+        grAz3zRuHudMV+Os6XxC7M5KCX0zRnj/BHmSCL/Bt532sdoDGOwygReicsMZbTwcTw2IxPNyd5Sb0a1i
+        WZ6gk3DbmnHlwIswKheCa14JVrsUbNfV8nGAIb7MMyyWIyVUIclVIx6oikiR2mop2FrR35I9FFJvh9fc
+        iIG+AAb8fhr9CFDDkdc5RPueiTBgGJ7gbhbDcBDEBBwWLQr2zES7cgFl4M9gGhaD9Vb/cxxgOO5dM8wW
+        YZgrxad8CYZ5+fgiUuE8xHqzwTv2IGBXwOdQweOwwdvlRk+X8zN5XPB5PfD3etFPRTc4ChZCeBSKo6zF
+        YTc1IHfbb2G5/Cb4xuWI1L0Dtq952zgAIDycZEv6U+xlDHEk5iLpAlJBBRI9exDv3YGYbzuNm+Cz5aLT
+        akGXw0myo6uzg6Bk2T4bnXZ0ux3o7elGKBQZBbAZGnBy63TYixaAb1hCAIsR7tPdvBOGJMvuISaPjAso
+        8nOkM0gNHkWiexviXVsQdWUi6tkAqWcXeiy56NCrYNM3osOgR4fZPArlsFngtJnhsJrgtLaPbkMZwNxW
+        h+ObpsF9jTJQ9zZCdcshsd1zb9oBIyOxR6JMrpgK52IopEAqdBrJvkOIuz+CZF8FwbEakncXaQ9pJ3j3
+        NoRsH8Jv3ANX6zFYdRdhaLoOg66Bup+eotYTiBl+nx/NtaXIyZoE96VZiJT/AQHNYqSk0NO3bMEU33Ah
+        FThKqT+JVOA4Er59iDv/CtGyCIJrIxnvhejZAd71AfjOd8Hb10G0rSVl0v7egKBhI7y63XC3nER701UY
+        dU3oMBpQceVfOLjqUbQrfgV3wbNwFSwQwr2OW9tyMhmYyvVlp5IDRyArLkfckQ7RupQAtkIgc8G1BZyd
+        zDuyyHQ9NRWSkaRfA+7Gagg3MiC2rASj3wxD4zUYW3UovXAMB9MfxY3jz6L91FNoLVwS4Hp6vn/bJpRi
+        ypWJ/v0E8DFiXVshmtNI1Dw6N0MkCNlc6CAAaxY40zoyXge2LRPsjTVgdWvAaFeDrVsJvn4F3NpD0NXV
+        4mrexzhMGWg7Og1tOVNgKtngoh7zzdsCDMX9MxP+vyPh3wupcz1EUxp400pwHe9BcL4P3vYuODJn28nY
+        sBYcmXOta8E2kXFDBtj6DDA16eDUyxBu2ACdpghKxUHkZDyG1pxfQpc9GdbrH5nlJndbAHkiETjbFO9+
+        H1HzEojGtyGYaO/qlyFiTCdjMpTTbqIMGGgkc66ZzBupw9WtAqtJB6NeAbZyOQSCsNUcRv6xvTi+9jFo
+        Dz+Duv2TYVMfKvnSd0Ay6lnEWLIQM6aRlkI0LALfMp+ifJWiehXB+gUINqQhQk2F0ZKpLIqcq6G1rybz
+        imVgVcvAl6chWPseCnI+wOl1E1F/4GlU734czsZzeV8KkEiMTNJq8lFfuBA+zXx6ebwBqe0dRFspG80L
+        KdK5YKvnIKKajeD1lzBYNo+0AOEKarEUOasilVG/L12MaHU6Pjm+AorMiajZ9yTKdzyOzpZi7/DIyIqR
+        kZFv3xEkwkdnm80OZa2mxF1VtB8NygxYit+Cv+p1cHXzIdRTU9HQseoVcCV/RKRoFkLKWQhcegEB5csI
+        XZlP596CWLIIHcrlyN80FZW7pqBs+89hbCxGKMLJX1Hr7/o6lqtVEFLTe3yBjXq9qUJTeTZSpdyOpsKl
+        1FpfQ3/ZK2BU88CVzQVXNBvcxZlg83+DyNnpCJ35NYJ5zyGonAf1oedRsvVnKP3bE6gqLYDd4QJ9Rb94
+        V4AvXkBpmxDm4jPdnr5/6LQNOnXJqU81+RvQcu5N6nS0JMWzES56CQwdM+eeA5c7A9HcaXCcnQPl5sm4
+        tOVJnFMcRWeXx3pPHyR3I5RSqaf6B7kPW/Xtmk9Kc0V1wSZozyyE7fzL8BbMQpCWJHL+eYQuzcG1bb+A
+        ImsKFCePya/uv9zt2fc9L42M/CjMSvPcHt+RFm2tTnMte7jm7Dq0Kl5DV/7v0XzkGWSvmASVShWiTP7g
+        vg3u9wZ5NwXC0TSb3VnQVFPaU1m4C5cVO+l7IZx5v896oOvlQo5Gk1P9/UxGMMxkUvTj/67/DaSaaAXU
+        BEfnAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="tstripMusicToolbar.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
